_readme.io/eosio-cleos-2019-3-22/v1.5.0/cleos/create/create account.md
---
title: "create account"
excerpt: "Creates a new account on the blockchain."
---
[block:api-header]
{
  "title": "Positionals"
}
[/block]
- `creator` _TEXT_ - The name of the account creating the new account
- `name` _TEXT_ - The name of the new account
- `OwnerKey` _TEXT_ - The owner public key for the new account
- `ActiveKey` _TEXT_ - The active public key for the new account
[block:api-header]
{
  "title": "Options"
}
[/block]
- `--stake-net` _TEXT_ - The amount of EOS delegated for net bandwidth
- `--stake-cpu` _TEXT_ - The amount of EOS delegated for CPU bandwidth
- `--buy-ram-kbytes` _UINT_32_ - The amount of RAM bytes to purchase for the new account in kibibytes (KiB), default is 8 KiB
- `--buy-ram` _TEXT_ - The amount of RAM bytes to purchase for the new account in EOS
- `--transfer` _BOOL_ - Transfer voting power and right to unstake EOS to receiver
[block:callout]
{
  "type": "info",
  "body": "If the system contract is loaded, (for example a production network) then use [cleos system newaccount](#cleos-system-newaccount) instead",
  "title": "Important Note"
}
[/block]

[block:api-header]
{
  "title": "Usage"
}
[/block]

[block:code]
{
  "codes": [
    {
      "code": "Usage: ./cleos create account [OPTIONS] creator name OwnerKey ActiveKey\n\nPositionals:\n  creator TEXT                The name of the account creating the new account\n  name TEXT                   The name of the new account\n  OwnerKey TEXT               The owner public key for the new account\n  ActiveKey TEXT              The active public key for the new account\n\nOptions:\n  -x,--expiration             set the time in seconds before a transaction expires, defaults to 30s\n  -f,--force-unique           force the transaction to be unique. this will consume extra bandwidth and remove any protections against accidently issuing the same transaction multiple times\n  -s,--skip-sign              Specify if unlocked wallet keys should be used to sign transaction\n  -d,--dont-broadcast         don't broadcast transaction to the network (just print to stdout)\n  -p,--permission TEXT ...    An account and permission level to authorize, as in 'account@permission' (defaults to 'creator@active')",
      "language": "shell"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Command"
}
[/block]
A set of EOS keys is required to create an account. A set of EOS keys can be generated by using `./cleos create key`.
[block:code]
{
  "codes": [
    {
      "code": "$ ./cleos create account inita tester EOS4toFS3YXEQCkuuw1aqDLrtHim86Gz9u3hBdcBw5KNPZcursVHq EOS7d9A3uLe6As66jzN8j44TXJUqJSK3bFjjEEqR4oTvNAB3iM9SA",
      "language": "shell"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Output"
}
[/block]

[block:code]
{
  "codes": [
    {
      "code": "{\n  \"transaction_id\": \"6acd2ece68c4b86c1fa209c3989235063384020781f2c67bbb80bc8d540ca120\",\n  \"processed\": {\n    \"refBlockNum\": \"25217\",\n    \"refBlockPrefix\": \"2095475630\",\n    \"expiration\": \"2017-07-25T17:54:55\",\n    \"scope\": [\n      \"eos\",\n      \"inita\"\n    ],\n    \"signatures\": [],\n    \"messages\": [{\n        \"code\": \"eos\",\n        \"type\": \"newaccount\",\n        \"authorization\": [{\n            \"account\": \"inita\",\n            \"permission\": \"active\"\n          }\n        ],\n        \"data\": \"c9251a0000000000b44c5a2400000000010000000102bcca6347d828d4e1868b7dfa91692a16d5b20d0ee3d16a7ca2ddcc7f6dd03344010000010000000102bcca6347d828d4e1868b7dfa91692a16d5b20d0ee3d16a7ca2ddcc7f6dd03344010000010000000001c9251a000000000061d0640b000000000100010000000000000008454f5300000000\"\n      }\n    ],\n    \"output\": [{\n        \"notify\": [],\n        \"sync_transactions\": [],\n        \"async_transactions\": []\n      }\n    ]\n  }\n}",
      "language": "shell"
    }
  ]
}
[/block]