_readme.io/eosio-cleos-2019-3-22/v1.7.0/cleos/create/create account.md
---
title: "create account"
excerpt: "Creates a new account on the blockchain (assumes system contract does not restrict RAM usage.)"
---
[block:api-header]
{
  "title": "Positionals"
}
[/block]
- `creator` _TEXT_ - The name of the account creating the new account
- `name` _TEXT_ - The name of the new account
- `OwnerKey` _TEXT_ - The owner public key or permission level for the new account (required)
- `ActiveKey` _TEXT_ - The active public key or permission level for the new account
[block:api-header]
{
  "title": "Options"
}
[/block]
-  `-h,--help` - Print this help message and exit
-  `-x,--expiration` - Set the time in seconds before a transaction expires, defaults to 30s
-  `-f,--force-unique` - force the transaction to be unique. this will consume extra bandwidth and remove any protections against accidently issuing the same transaction multiple times
-  `-s,--skip-sign` - Specify if unlocked wallet keys should be used to sign transaction
-  `-j,--json` - Print result as json
-  `-d,--dont-broadcast` - Don't broadcast transaction to the network (just print to stdout)
-  `--return-packed` - Used in conjunction with --dont-broadcast to get the packed transaction
-  `-r,--ref-block` _ TEXT_ - Set the reference block num or block id used for TAPOS (Transaction as Proof-of-Stake)
- `-p,--permission` _TEXT_ - An account and permission level to authorize, as in 'account@permission' (defaults to 'creator@active')
- `--max-cpu-usage-ms`  _UINT_ - Set an upper limit on the milliseconds of cpu usage budget, for the execution of the transaction (defaults to 0 which means no limit)
- `--max-net-usage` _UINT_ - set an upper limit on the net usage budget, in bytes, for the transaction (defaults to 0 which means no limit)
- `--delay-sec` _UINT_ - Set the delay_sec seconds, defaults to 0s

[block:callout]
{
  "type": "info",
  "body": "If the system contract is loaded, (for example a production network) then use [cleos system newaccount](#cleos-system-newaccount) instead",
  "title": "Important Note"
}
[/block]

[block:api-header]
{
  "title": "Usage"
}
[/block]

[block:code]
{
  "codes": [
    {
      "code": "Usage: cleos create account [OPTIONS] creator name OwnerKey [ActiveKey]\n\nPositionals:\n  creator TEXT                The name of the account creating the new account (required)\n  name TEXT                   The name of the new account (required)\n  OwnerKey TEXT               The owner public key or permission level for the new account (required)\n  ActiveKey TEXT              The active public key or permission level for the new account\n\nOptions:\n  -h,--help                   Print this help message and exit\n  -x,--expiration             set the time in seconds before a transaction expires, defaults to 30s\n  -f,--force-unique           force the transaction to be unique. this will consume extra bandwidth and remove any protections against accidently issuing the same transaction multiple times\n  -s,--skip-sign              Specify if unlocked wallet keys should be used to sign transaction\n  -j,--json                   print result as json\n  -d,--dont-broadcast         don't broadcast transaction to the network (just print to stdout)\n  --return-packed             used in conjunction with --dont-broadcast to get the packed transaction\n  -r,--ref-block TEXT         set the reference block num or block id used for TAPOS (Transaction as Proof-of-Stake)\n  -p,--permission TEXT ...    An account and permission level to authorize, as in 'account@permission' (defaults to 'creator@active')\n  --max-cpu-usage-ms UINT     set an upper limit on the milliseconds of cpu usage budget, for the execution of the transaction (defaults to 0 which means no limit)\n  --max-net-usage UINT        set an upper limit on the net usage budget, in bytes, for the transaction (defaults to 0 which means no limit)\n  --delay-sec UINT            set the delay_sec seconds, defaults to 0s\n",
      "language": "shell"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Command"
}
[/block]
A set of EOS keys is required to create an account. A set of EOS keys can be generated by using `./cleos create key`.
[block:code]
{
  "codes": [
    {
      "code": "using public keys \n\n$ ./cleos create account inita tester EOS4toFS3YXEQCkuuw1aqDLrtHim86Gz9u3hBdcBw5KNPZcursVHq EOS7d9A3uLe6As66jzN8j44TXJUqJSK3bFjjEEqR4oTvNAB3iM9SA\n\nusing permission levels\n\n$ ./cleos create account eosio eosio.token eosio@active eosio@active",
      "language": "shell"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Output"
}
[/block]

[block:code]
{
  "codes": [
    {
      "code": "{\n  \"transaction_id\": \"6acd2ece68c4b86c1fa209c3989235063384020781f2c67bbb80bc8d540ca120\",\n  \"processed\": {\n    \"refBlockNum\": \"25217\",\n    \"refBlockPrefix\": \"2095475630\",\n    \"expiration\": \"2017-07-25T17:54:55\",\n    \"scope\": [\n      \"eos\",\n      \"inita\"\n    ],\n    \"signatures\": [],\n    \"messages\": [{\n        \"code\": \"eos\",\n        \"type\": \"newaccount\",\n        \"authorization\": [{\n            \"account\": \"inita\",\n            \"permission\": \"active\"\n          }\n        ],\n        \"data\": \"c9251a0000000000b44c5a2400000000010000000102bcca6347d828d4e1868b7dfa91692a16d5b20d0ee3d16a7ca2ddcc7f6dd03344010000010000000102bcca6347d828d4e1868b7dfa91692a16d5b20d0ee3d16a7ca2ddcc7f6dd03344010000010000000001c9251a000000000061d0640b000000000100010000000000000008454f5300000000\"\n      }\n    ],\n    \"output\": [{\n        \"notify\": [],\n        \"sync_transactions\": [],\n        \"async_transactions\": []\n      }\n    ]\n  }\n}",
      "language": "shell"
    }
  ]
}
[/block]